Fikset litt på index. fikset litt på script, sjekker nå etter riktig epost.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="script.js"></script>
 </head>
 <body>
 <h1>Oblig 1</h1>
@@ -34,7 +35,7 @@
 <label for="epost">Epost: </label>
 <input type="text" id="epost"><br>
 
-<button onclick="kjøp()">Kjøp Billett</button><br><br>
+<button onclick="kjop()">Kjøp Billett</button><br><br>
 
 <h2>Alle billetter: </h2>
 <p id="utFelt"></p><br><br>
